<resources>
    <string name="app_name">Harpa Cristã</string>


    <!-- Main Activity -->
    <string name="main_carregando">Carregando</string>
    <string name="main_carregando_msg">Aguarde enquanto baixamos todos os hinos da Harpa Cristã.\nIsso pode demorar alguns minutos.</string>
    <string name="main_erro">Ahhh, que pena!</string>
    <string name="main_erro_msg">Parece que houve algum erro para baixar os hinos, deseja tentar novamente agora?</string>
    <string name="main_hinos_salvos_com_sucesso">Hinos salvos com sucesso!</string>
    <string name="main_remover_anuncios">Remover anúncios</string>
    <string name="main_biblia_sagrada">Bíblia Sagrada</string>
    <string name="main_biblia_sagrada_alert">Download Bíblia Sagrada</string>
    <string name="main_biblia_sagrada_alert_message">Baixe agora o novo aplicativo da Bílbia Sagrada.\nRápido, leve e simples.</string>
    <string name="main_biblia_sagrada_alert_play_store">Play Store</string>
    <string name="main_biblia_sagrada_alert_nao_mostrar">Não mostrar novamente</string>

    <!-- Detalhe Hino Activity -->
    <string name="detalhe_hino_menu_compartilhar">Compartilhar</string>
    <string name="detalhe_hino_menu_favoritar">Favoritar</string>
    <string name="detalhe_hino_anterior">A—</string>
    <string name="detalhe_hino_proximo">A+</string>
    <string name="detalhe_hino_compartilhar_com">Compartilhar com...</string>

    <!-- Fragment Hinos -->
    <string name="hinos_favorito_com_sucesso">Hino salvo em favorito com sucesso!</string>
    <string name="hinos_removido_favorito_com_sucesso">Hino removido de favorito com sucesso!</string>

    <!-- Fragment Favoritos -->
    <string name="favoritos_nehum_hino_salvo_em_favoritos">Nenhum Hino salvo em Favoritos!</string>

    <!-- Fragment Autor -->
    <string name="autor_nenhum_hino_com_esse_autor">Nenhum hino com esse autor!</string>

    <!-- Fragment Configurações -->
    <string name="configuracoes_cores">CORES</string>
    <string name="configuracoes_mais">+ APLICATIVOS</string>
    <string name="configuracoes_mais_descricao">Veja mais aplicativos desenvoldido por Diogo Silva</string>
    <string name="configuracoes_sobre">SOBRE</string>
    <string name="configuracoes_sobre_descricao">Veja mais detalhe do aplicativo</string>
    <string name="alert_sobre">Harpa Cristã\n\nDesenvolvedor: Diogo Silva\n\nVersão: 1.0.0</string>

    <!-- Erros -->
    <string name="exception_erro_err_internet_disconnected">Não foi possível encontrar conexão com a internet. Tente novamente!</string>
    <string name="main_sem_conexao">Sem Conexão</string>
    <string name="main_sem_conexao_mensagem">Precisamos de conexão com a internet na primeira utilização, porém não encontramos, deseja tentar novamente?</string>
    <string name="main_nao_sair">Não, sair!</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="speech_prompt">Fale um número</string>
    <string name="speech_not_supported">Desculpe! Seu dispositivo não suporta esta função</string>
    <string name="speech_max_min">Fale um número entre 1 e 640</string>

    <string name="default_color">#9901A4B7</string>
    <string name="pink">#99E91E63</string>
    <string name="red">#99F44336</string>
    <string name="purple">#999C27B0</string>
    <string name="deep_purple">#99673AB7</string>
    <string name="indigo">#993F51B5</string>
    <string name="light_blue">#9903A9F4</string>
    <string name="cyan">#9900BCD4</string>
    <string name="teal">#99009688</string>
    <string name="green">#994CAF50</string>
    <string name="light_green">#998BC34A</string>
    <string name="lime">#99CDDC39</string>
    <string name="orange">#99FF9800</string>
    <string name="deep_orange">#99FF5722</string>
    <string name="gray">#999E9E9E</string>

</resources>
