<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vagnermartins.harpacrista.ui.activity.DetalheHinoActivity">

    <item
        android:id="@+id/menu_detalhe_speak_now"
        android:icon="@drawable/microphone"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_detalhe_hino_favoritar"
        android:checkable="true"
        android:title="@string/detalhe_hino_menu_favoritar" />

    <group>

        <item
            android:id="@+id/menu_detalhe_hino_compartilhar"
            android:title="@string/detalhe_hino_menu_compartilhar" />

    </group>
</menu>