<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustResize">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/fragment_configuracoes_cores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracoes_cores"
            android:textSize="@dimen/primary_text_font" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <LinearLayout
                android:id="@+id/fragment_configuracoes_cores_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="7dp">

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/fragment_configuracoes_mais_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <TextView
                android:textColor="#000"
                android:id="@+id/fragment_configuracoes_mais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuracoes_mais"
                android:textSize="@dimen/primary_text_font" />

            <TextView
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/configuracoes_mais_descricao"
                android:textSize="@dimen/primary_text_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_configuracoes_sobre_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <TextView
                android:textColor="#000"
                android:id="@+id/fragment_configuracoes_sobre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/configuracoes_sobre"
                android:textSize="@dimen/primary_text_font" />

            <TextView
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:text="@string/configuracoes_sobre_descricao"
                android:textSize="@dimen/primary_text_font" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>